# azbackend

./: pyproject.toml
alembic/: env.py
alembic/versions/: cad98e6ea4fb_init_portfolio_and_courses.py
app/: main.py
app/api/v1/courses/: models.py  routes.py  schemas.py  service.py
app/api/v1/portfolio/: models.py  routes.py  schemas.py  service.py
app/core/: config.py  database.py  middleware.py  redis.py  routes.py
