[project]
name = "azbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "authlib>=1.5.2",
    "bcrypt==4.0.1",
    "celery>=5.5.2",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pydantic-ai-slim[google,groq,logfire,mcp,openai,tavily]>=0.2.20",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
    "websockets>=15.0.1",
    "firebase-admin>=7.1.0",
    "jinja2>=3.1.6",
]
